@@ -1,6 +1,6 @@
 SUBDIRS = 
 
-bin_PROGRAMS = rts2-focusd-optec rts2-focusd-robofocus rts2-focusd-dummy rts2-focusd-opentpl rts2-focusd-atc2 rts2-focusd-microfocuser
+bin_PROGRAMS = rts2-focusd-optec rts2-focusd-robofocus rts2-focusd-dummy rts2-focusd-opentpl rts2-focusd-atc2 rts2-focusd-microfocuser rts2-focusd-nstep
 
 LDADD = -L../../lib/rts2 -lrts2 @LIB_NOVA@
 AM_CXXFLAGS = @NOVA_CFLAGS@ -I../../include
@@ -16,6 +16,8 @@ rts2_focusd_opentpl_SOURCES = opentpl.cpp
 rts2_focusd_atc2_SOURCES = atc2.cpp
 
 rts2_focusd_microfocuser_SOURCES = microfocuser.cpp
+
+rts2_focusd_nstep_SOURCES = nstep.cpp
 
 EXTRA_DIST = 
 
