@@ -1,3 +1,9 @@
+2013-02-14
+ * added support for GCUSB-nStep focuser
+
+2013-01-13
+ * fixed various bugs in simulator
+
 2013-01-20
  * test_restart command for XMLRPCd
  * queues_targets table
